# CMake

./: CMakeLists.txt  README.md  main.cpp
CMakeTestLib/: function.cpp
cmake/: spdlogConfig.cmake
